--- a/app/styles/application.styl
+++ b/app/styles/application.styl
@@ -8,6 +8,9 @@
   height 100vh
   flex-wrap wrap
 
+.margined
+  margin: 50px 0 0
+
 .alert
   position absolute
   top 0
@@ -32,6 +35,7 @@
     display flex
     align-items center
     border 1px solid black
+    margin 2px 0
 
     p
       margin 0
