Fixed Headers position

--- a/app/styles/application.styl
+++ b/app/styles/application.styl
@@ -99,3 +99,15 @@ color: #04A3ED;
 {
   margin-top: 50px; 
 }
+
+.text-todo
+{
+font-family: 'Ubuntu Condensed', sans-serif;
+text-align: center;
+padding: 0px;
+margin: 200px;
+text-decoration: none;
+color: black;
+font-size: 25px;
+padding: 5px 30px;
+}
