--- a/app/styles/application.styl
+++ b/app/styles/application.styl
@@ -111,3 +111,65 @@ color: black;
 font-size: 25px;
 padding: 5px 30px;
 }
+.c-todos-list-item{
+  align-items: center;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.c-todos-list-body{
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  word-break: break-all;
+}
+.fade-enter{
+  opacity: 0.01;
+}
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity .200ms ease-in;
+}
+
+.fade-appear {
+  opacity: 0.01;
+}
+
+.fade-appear.fade-appear-active {
+  opacity: 1;
+  transition: opacity 200ms ease-in;
+}
+
+
+.from-top-enter{
+  max-height: 0;
+}
+.from-top-enter.from-top-enter-active {
+  max-height: 200px;
+  transition: max-height 500ms ease-in-out;
+}
+
+.from-top-leave{
+  max-height: 200px;
+}
+.from-top-leave.from-top-leave-active {
+  max-height: 0;
+  transition: max-height 500ms ease-in-out;
+}
+.u-flex-container{
+  display: flex;
+}
+.u-flex-center{
+  align-items: center;
+}
+.u-flex-baseline{
+  align-items: baseline;
+}
+.u-flex-full{
+  flex: 1;
+}
